--- a/TMT-ENG-WEB-CSS.css
+++ b/TMT-ENG-WEB-CSS.css
@@ -1,4 +1,8 @@
 div{
     background-color:red;
     border:solid black;
+    height: 7vh;
+           width: 100%;
+           margin-top: 35%;
+           float: left;
 }
