--- a/TMT-ENG-WEB-CSS.css
+++ b/TMT-ENG-WEB-CSS.css
@@ -2,7 +2,11 @@
     margin: 0px;
     padding: 0px;
 }
-
+#meny{
+    background-color: white;
+    width: 100%;
+    height: 12vh;
+}
 
 body{
     background-image: url(Bilder/Backgrundsbild.jpg);
