--- a/TMT-ENG-WEB-CSS.css
+++ b/TMT-ENG-WEB-CSS.css
@@ -2,6 +2,12 @@
     margin: 0px;
     padding: 0px;
 }
+#culture{
+    background-color: black;
+    width: 150px;
+    height: 100%;
+}
+
 #meny{
     background-color: white;
     width: 100%;
@@ -9,7 +15,7 @@
 }
 
 body{
-    background-image: url(Bilder/Backgrundsbild.jpg);
+    background-image: url(Bilder/background\ test.jpg);
     background-size: cover;
     overflow: scroll;
 }
