--- a/TMT-ENG-WEB-CSS.css
+++ b/TMT-ENG-WEB-CSS.css
@@ -2,14 +2,19 @@
     margin: 0px;
     padding: 0px;
 }
-#culture{
-    background-color: black;
+#bildicon1{
+    width:100%;
+    height:100%;
+}
+
+#Icon1{
+    background-color: Red;
     width: 150px;
     height: 100%;
 }
 
 #meny{
-    background-color: white;
+    background-color: Red;
     width: 100%;
     height: 12vh;
 }
