--- a/TMT-ENG-WEB-CSS.css
+++ b/TMT-ENG-WEB-CSS.css
@@ -6,18 +6,31 @@
     width:100%;
     height:100%;
 }
+#bildicon2{
+    width:100%;
+    height:100%;
+    float:right;
+    margin-left: 1000px;
+}
 
 #Icon1{
     background-color: Red;
-    width: 150px;
-    height: 100%;
+    width: 110px;
+    height: 110px;
+    float:left;
+}
+#Icon2{
+    background-color: Red;
+    width: 110px;
+    height: 110px;
+    float:left;
 }
 
 #meny{
     background-color: Red;
     width: 100%;
-    height: 12vh;
-    opacity: 0.8;
+    height: 12.7vh;
+    opacity: 0.715;
 }
 
 #meny ul{
@@ -26,6 +39,26 @@
 #meny ul li{
     list-style: none;
     display:inline-block;
+    
+}
+#border{
+    border-left: solid white;
+}
+#meny ul li a{
+    display:block;
+    text-decoration: none;
+    text-transform: uppercase;
+    color:white;
+    font-size:20px;
+    font-family: 'Raieway', sans-serif;
+    letter-spacing: 10px;
+    font-weight: 700;
+    padding: 50px;
+    border-right: solid white;
+   
+}
+#meny ul li a:hover{
+    background-color: darkred;
 }
 
 body{
@@ -40,4 +73,10 @@ body{
     font-size: 50px;
     font-family: 'Times New Roman', Times, serif;
     margin: auto;
+}
+#IntroPage{
+    width:70%;
+    height: 200vh;
+    background-color:white;
+    margin-left: 15%;
 }
