--- a/TMT-ENG-WEB-CSS.css
+++ b/TMT-ENG-WEB-CSS.css
@@ -69,7 +69,7 @@
     height:100vh;
     background-image: url(Bilder/background\ test.jpg);
     background-size: cover;
-    overflow: scroll;
+    overflow: scroll; 
     background-repeat: no-repeat;
     background-attachment: fixed;
     position: relative;
@@ -88,25 +88,16 @@
     text-align: center;
     font-size: 50px;
     font-family: 'Times New Roman', Times, serif;
-    margin: auto;
+    margin: 
 }
-<<<<<<< Updated upstream
 #effect{
-=======
-
-#IntroPage{
->>>>>>> Stashed changes
     width:70%;
     height: 50vh;
     background-color:white;
-<<<<<<< Updated upstream
     margin:auto;
     margin-top: 50%;
 }
 body{
     padding: 0;
     margin: 0;
-=======
-    margin-left: 15%;
->>>>>>> Stashed changes
 }
