--- a/TMT-ENG-WEB-CSS.css
+++ b/TMT-ENG-WEB-CSS.css
@@ -80,7 +80,7 @@ body{
     text-align: center;
     font-size: 50px;
     font-family: 'Times New Roman', Times, serif;
-    margin: 
+    margin: auto;
 }
 #effect{
     width:100%;
