--- a/TMT-ENG-WEB-CSS.css
+++ b/TMT-ENG-WEB-CSS.css
@@ -76,16 +76,27 @@ body{
 }
 
 #intro{
+    position: absolute;
     color: white;
-    text-align: center;
+    top: 25%;
+    left: 50%;
     font-size: 50px;
     font-family: 'Times New Roman', Times, serif;
-    margin: 
 }
 #effect{
-    width:100%;
+    width: 100%;
     height: 100vh;
-    background-color:white;
-    margin:auto;
-    margin-top: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.heading{
+    position: absolute;
+    top: 250px;
+    left: 70px;
+}
+.paragraf{
+    margin-left:70px;
+    margin-right:20px;
+    font-size: 20px;
 }
