--- a/CultureCSS.css
+++ b/CultureCSS.css
@@ -6,3 +6,13 @@
     background-attachment: fixed;
     position: relative;
 }
+
+#effect2{
+    background-color: white;
+    height: 100vh;
+    width: 100%;
+    margin-top: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
