--- a/TMT-ENG-WEB-CSS.css
+++ b/TMT-ENG-WEB-CSS.css
@@ -78,25 +78,33 @@ body{
 .intro{
     position: absolute;
     color: white;
-    top: 30%;
+    top: 20%;
     left: 45%;
     font-size: 100px;
     font-family: 'Times New Roman', Times, serif;
 }
 #effect{
-    width: 100%;
+    background-color: white;
     height: 100vh;
+    width: 100%;
+    margin-top: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    }
+}
 .heading{
-    position: absolute;
-    top: 250px;
-    left: 70px;
+        position: absolute;
+        top: 1300px;
+        left: 70px;
 }
 .paragraf{
     margin-left:70px;
     margin-right:20px;
     font-size: 20px;
+}
+.text{
+    display: inline;
+    margin-left:0;
+    margin-right: 40%;
+    
 }
