--- a/CultureCSS.css
+++ b/CultureCSS.css
@@ -1,5 +1,5 @@
 #CultureBody{
-    background-image: url(Bilder/culturebackground.jpg);
+    background-image: url(Bilder/Culture.jpg);
     background-size: cover;
     overflow: scroll;
     background-repeat: no-repeat;
